@@ -1,3 +1,8 @@
+2005-09-25  Bruno Haible  <bruno@clisp.org>
+
+	* x-csharp.c (phase2_getc): Fix mis-use of iconv() when the source
+	encoding is neither ASCII nor UTF-8.
+
 2005-09-20  Bruno Haible  <bruno@clisp.org>
 
 	* msgattrib.c (main): Invoke bindtextdomain for bison-runtime.
